<resources>
    <string name="app_name">Hospital Santa Iris</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="citas">Citas</string>
    <string name="citasCoronavirus">Posible caso coronavirus</string>
    <string name="seleccionarfecha">Selecciona fecha</string>
    <string name="seleccionarhora">Selecciona hora</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cambiardescpaciente">Cambiar descripción de paciente</string>
    <string name="descripcion">Descripción</string>
    <string name="camposobligatorios">Campos obligatorios</string>
    <string name="titulosanitarios">SANITARIOS</string>
    <string name="tituloagenda">AGENDA</string>
    <string name="cambiarcontraseña">Cambiar contraseña</string>
    <string name="correorestablecercontraseña">Se ha enviado un correo para restablecer contraseña</string>
    <string name="erroriniciosesion">Error en el inicio de sesión</string>
    <string name="sesioncerrada">Sesión cerrada</string>
    <string name="titulomapa">Hospital Santa Iris</string>
    <string name="existenCitas">Existen nuevas citas</string>
    <string name="obligatoriofechahora">Campos hora y fecha necesarios</string>
    <string name="limpio">Limpio:</string>
    <string name="fraselimpio">La habitación se encuentra limpia y lista para ser ocupada</string>
    <string name="frasenolimpio">La habitación no se encuentra limpia, no puede ser ocupada</string>
    <string name="nombre">Nombre:</string>
    <string name="numsegsocial">Nº Seg.Social:</string>
    <string name="contacto">Contacto:</string>
    <string name="numcolegiado">Nº Colegiado:</string>
    <string name="rol">Rol:</string>
    <string name="especialidad">Especialidad:</string>
    <string name="email">E-mail:</string>
    <string name="pregunta1">
        ¿En los últimos 14 días ha comenzado a presentar al menos \nuno
        de los siguientes síntomas que previamente no tenía: \ntos, dificultad para
        respirar, dolor de garganta, fiebre de \nmás de 37º?
    </string>
    <string name="pregunta2">
        ¿Ha estado en alguna de las zonas de transmisión
        \ncomunitaria en los últimos 14 días?
    </string>
    <string name="pregunta3">
        ¿Ha tenido contacto estrecho en los últimos 14 días con una persona
        que sea un caso probable o confirmado de padecer coronavirus?
    </string>
    <string name="pregunta4">¿Ha perdido en mayor o menos medida el sentido del olfato y/o gusto?</string>
    <string name="pregunta5">¿Tiene obstrucción nasal, secreción o goteo?</string>
    <string name="spinner">Selecciona un plano</string>
    <string-array name="planos">
        <item>Plano general</item>
        <item>Planta baja</item>
        <item>Primera planta</item>
        <item>Segunda planta</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_maps">MapaHospital</string>

</resources>
